--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ html{
 }
 body{
     font-family: 'Roboto', sans-serif;
-    color: var(--primary-text-color); 
+    color: var(--accent-color); 
 }
 /*-----------------header--------------------*/
 .link{
@@ -78,6 +78,12 @@ img{
     display: flex;
     align-items: center;
 }
+.item{
+    position: relative;
+}
+.current{
+    color: var(--hover-fokus-color);
+}
 .current::after{
     content: "";
     position: absolute;
@@ -86,10 +92,14 @@ img{
     display: block;
     width: 100%;
     height: 4px;
+    border-radius: 2px;
     background-color: var(--hover-fokus-color);
 }
-.item{
-    position: relative;
+.header-item{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-nav .header-item:hover,
 .header-nav .header-item:focus{
@@ -133,9 +143,7 @@ img{
         letter-spacing: 0.02em;
         color: var(--primary-text-color);
 
-        transition-property: color;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
    
     /*--------------Main banner------------------*/
@@ -186,9 +194,7 @@ img{
         cursor: pointer;
         display: block;
 
-        transition-property: background-color;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     /*----------------About company-----------------*/
     .company{
@@ -305,12 +311,9 @@ img{
         align-items: center;
         justify-content: center;
         fill: var(--light-color);
-
-        transition-property: background-color;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    .team-soc-link:hover{
+        .team-soc-link:hover{
         background-color: var(--hover-fokus-color);
     }
     /*----------------Customers--------------------*/
@@ -344,9 +347,7 @@ img{
         border: 1px solid #8E8F99;
         fill: var(--light-gray);
 
-        transition-property: border-color;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .customer-icon{
         transition-property: fill;
@@ -411,9 +412,7 @@ img{
         border: 1px solid var(--text-footer);
         cursor: pointer;
 
-        transition-property: background-color, border-color, color, box-shadow;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .link{
         text-decoration: none;
@@ -425,6 +424,7 @@ img{
 }
 .img-li{
     width: calc((100% - 48px) /3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portf-typs{
     display: flex;
@@ -447,7 +447,7 @@ img{
      font-weight: 400;
      font-size: 16px;
      line-height: 1.5;
-     padding: 40px 32px 164px;
+     padding: 40px 32px 0;
      color: var(--light-color);
      background-color: var(--title-text-color);
      transform: translateY(100%);
@@ -542,10 +542,7 @@ img{
         border-radius: 50%;
         background-color: rgba(255, 255, 255, 0.1);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        
-        transition-property: background-color;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .footer-soc-icon{
         fill: #F4F4FD;
@@ -559,6 +556,8 @@ img{
         width: 100%;
         height: 100%;
         background-color: rgba(48, 48, 48, 0.5);
+        opacity: 1;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .modal{
         width: 408px;
@@ -568,13 +567,17 @@ img{
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
         padding: 24px;
+        transform: translate(-50%, -50%) scale(1);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .close-icom{
+        position: absolute;
         display: block;
         margin-left: auto;
         border: none;
+        top: 24px;
+        right: 24px;
         background-color: var(--white);
         cursor: pointer;
     }
