--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ html{
 }
 body{
     font-family: 'Roboto', sans-serif;
-    color: var(--accent-color); 
+    color: var(--accent-color);
 }
 /*-----------------header--------------------*/
 .link{
@@ -469,6 +469,7 @@ img{
         line-height: 1.2;
         letter-spacing: 0.02em;
         margin-bottom: 8px;
+        color: var(--accent-color);
         }
     /*-----------------footer--------------------*/
     .footer{
@@ -551,7 +552,7 @@ img{
         height: 100%;
         background-color: rgba(48, 48, 48, 0.5);
         opacity: 1;
-        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .modal{
         width: 408px;
@@ -562,8 +563,8 @@ img{
         top: 50%;
         left: 50%;
         padding: 24px;
-        transform: translate(-50%, -50%) scale(1);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transform: translate(-50%, -50%) scaleY(1);
+        transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .close-icom{
         position: absolute;
@@ -576,7 +577,7 @@ img{
         cursor: pointer;
     }
     .is-hidden{
-        opacity: o;
+        opacity: 0;
         visibility: hidden;
         pointer-events: none;
     }
