--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ img{
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
+    color: var(--accent-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .current{
@@ -535,8 +536,7 @@ img{
         width: 100%;
         height: 100%;
         border-radius: 50%;
-        background-color: rgba(255, 255, 255, 0.1);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        background-color: var(--title-text-color);
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .footer-soc-icon{
@@ -545,6 +545,61 @@ img{
     .footer-soc-link:hover{
         background-color: #31D0AA;
     }
+    .footer-sub-box{
+        margin-left: auto;
+    }
+    .title-lab{
+        width: 75px;
+        height: 24px;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        margin-bottom: 16px;
+        color: var(--white);
+        }
+    .footer-input{
+        width: 264px;
+        height: 40px;
+        border: 1px solid var(--white);
+        border-radius: 4px;
+        padding-left: 16px;
+        background-color: transparent;
+        outline: transparent;
+    }
+    .footer-sub-form{
+        display: flex;
+    }
+    .footer-sub-icon{
+        position: relative;
+    }
+    .footer_buttom{
+        display: flex;
+        align-items: center;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        padding-left: 24px;
+        margin-left: 24px;
+        width: 165px;
+        height: 40px;
+        border: none;
+        border-radius: 4px;
+        color: var(--white);
+        background: var(--title-text-color);
+        cursor: pointer;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     }
+     .subscribe_icon{
+        position: absolute;
+        right: 24px;
+        top: 50%;
+        transform: translateY(-50%);
+        fill: var(--white)
+     }
+
+    /*------------ Modil-------------- */
     .backdrop{
         position: fixed;
         top: 0;
@@ -554,27 +609,121 @@ img{
         opacity: 1;
         transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    .modal{
+    .modal{ 
+        position: absolute;
         width: 408px;
         min-height: 576px;
         background-color: var(--white);
         border-radius: 4px;
-        position: absolute;
         top: 50%;
         left: 50%;
-        padding: 24px;
-        transform: translate(-50%, -50%) scaleY(1);
-        transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
+        padding: 24px 24px;
+        transform: translate(-50%, -50%) scale(1);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .backdrop.is-hidden .modal{
+        transform: translate(-50%, -50%) scale(0);
     }
     .close-icom{
         position: absolute;
-        display: block;
-        margin-left: auto;
-        border: none;
-        top: 24px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 24px;
+        height: 24px;
         right: 24px;
-        background-color: var(--white);
+        padding: 4px;
+        border-radius: 50%;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        background-color: var(--text-footer);
+        fill: var(--accent-color);
         cursor: pointer;
+    }
+    .mobile_title{
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        text-align: center;
+        margin-top: 48px;
+        margin-bottom: 16px;
+    }
+    .mobile_input{
+        width: 100%;
+        height: 40px;
+        border: 1px solid var(--light-gray);
+        border-radius: 4px;
+        padding-left: 38px;
+        outline: transparent;
+    }
+    .mobile_input:focus{
+    border-color: var(--title-text-color);
+    }
+    .mobile_input:focus + .mobile_icon{
+        fill: var(--title-text-color)
+    }
+    .mobile_label_text{
+        display: inline-block;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16;
+        margin-top: 8px;
+        margin-bottom: 4px;
+        color: var(--light-gray);
+    }
+    .input_wrap{
+        position: relative;
+    }
+    .mobile_icon{
+        position: absolute;
+        left: 16px;
+        top: 50%;
+        transform: translateY(-50%);
+        fill: var(--accent-color);
+    }
+    .mobile_comment{
+        width: 100%;
+        height: 120px;
+        border: 1px solid var(--light-gray);
+        border-radius: 4px;
+        padding-left: 38px; 
+    }
+    .mobile_input_comment{
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16;
+        width: 100%;
+        height: 120px;
+        border: 1px solid var(--light-gray);
+        border-radius: 4px;
+        padding-left: 16px;
+        padding-top: 8px;
+        outline: transparent;
+        resize: none;
+    }
+    .mobile_input_comment:focus{
+        border-color: var(--title-text-color);
+        }
+    .mobile_buttom{
+        display: block;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 48px;
+        width: 169px;
+        height: 56px;
+        padding-left: auto; 
+        padding-right: auto;
+        border: none;
+        border-radius: 4px;
+        color: var(--white);
+        background: var(--title-text-color);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        cursor: pointer;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .is-hidden{
         opacity: 0;
